<resources>
    <string name="app_name">Find my dog</string>
    <string name="add_student">ADD STUDENT</string>
    <string name="icon_image">icon image</string>
    <string name="find_my_dog">Find My Dog</string>
    <string name="login_header">Welcome Back!</string>>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="dog_image">Dog Image</string>
    <string name="publisher_img">publisher_img</string>
    <string name="dot">●</string>
    <string name="post_card_detail_transition_name">post_card_detail</string>
    <string name="add_post_button">Add post button</string>
    <string name="Title" />
    <string name="details">Details</string>
    <string name="select_image">Select image</string>
    <string name="publish">Publish</string>
    <string name="cancel_button">cancel button</string>
    <string name="publish_post_button">Publish post button</string>
    <string name="title">Title</string>
    <string name="send_email" />
    <string name="location">Location</string>
    <string name="explore" />
    <string name="profile" />
    <string name="posts" />
    <string name="logout" />
    <string name="edit_user_details_btn" />
</resources>