<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="visible"
        android:clickable="false"
        android:focusable="false"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_post_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/location"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="2dp">

                <AutoCompleteTextView
                    android:id="@+id/new_post_locations_menu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/details"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                app:boxBackgroundMode="outline"
                app:boxStrokeColor="@android:color/black"
                app:hintTextColor="@android:color/black"
                android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/new_post_details"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:gravity="top|start"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/new_post_img"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/photo"
                android:contentDescription="@string/select_image"
                android:layout_marginTop="16dp"
                android:scaleType="centerInside"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="16dp"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp">

            <ImageView
                android:id="@+id/cancel_new_post"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/cancel_button"
                android:src="@drawable/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:clickable="true"
                android:focusable="true" />
            <ImageView
                android:id="@+id/send_new_post"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="2dp"
                android:contentDescription="@string/publish_post_button"
                android:src="@drawable/send"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:clickable="true"
                android:focusable="true" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
